# GUNN-Task1

./: Aggregator.h  BaseLayer.h  CMakeLists.txt  GATL.h  GCNL.cpp  GCNL.h  GCNTest.h  Graph.cpp  Graph.h  GraphReadermain.cpp  GraphSage.h  README.md  a.out  dgl_output_main.py  gat_executable  gcn_executable  gnn_test  gs_executable  nitpicks.md  output  output.cpp  output.h  output_main.cpp  test_dgl_output.py
ForwardImplementation/: CMakeLists.txt  GATL.h  Graph.h  GraphReader.h  GraphSage.cpp  README.md  output_main.cpp
GCN/: Aggregator.h  BaseLayer.h  GATL.cpp  GCNTest.cpp  Graph.cpp  GraphReader.cpp  README.md  Readme.md  output.cpp  output.h  output_main.cpp
Testing/: dgl_output_main.py  final_test.py  test_dgl_output.py
